# credixai

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  prd.md  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  dashboard.py  dashboard_launcher.py
data/: processed.dvc
docs/: architecture-characteristics.md  architecture-style-selection.md  guia-de-usuario.md  informe-ejecutivo.md  informe-final.md  model-card.md
docs/adr/: ADR-001-service-based-architecture.md  ADR-002-langgraph-over-crewai.md  ADR-003-xgboost-as-primary-model.md  ADR-004-rag-over-fine-tuning.md
docs/diagrams/: component-diagram.md
docs/policy_corpus/: 01_bcra_gestion_riesgo_crediticio.md  02_basilea_capital_riesgo_credito.md  03_cfpb_adverse_action.md  04_politica_interna_credixai.md
notebooks/: 01_eda.ipynb  02_features.ipynb  03_clustering.ipynb  04_modeling.ipynb  05_xai.ipynb
scripts/: 00_download_data.py  02_features.py  03_clustering.py  04_modeling.py  05_explainability.py  06_rag_ingest.py  07_rag_eval.py  08_langfuse_judge_validation.py  09_drift_report.py
src/credixai/: __init__.py  api.py  clustering.py  dashboard.py  dashboard_client.py  explainability.py  features.py  llm_json.py  modeling.py
src/credixai/copilot/: evaluator.py  generation.py  graph.py  tools.py
src/credixai/monitoring/: drift.py  logging.py
src/credixai/observability/: metrics.py
src/credixai/rag/: chunking.py  corpus.py  generation.py  hybrid_search.py  openrouter_client.py  pipeline.py  reranker.py  retrieval.py  sparse_index.py  vector_store.py
tests/: test_api_copilot_http.py  test_api_http.py  test_api_prediction_logging.py  test_api_rag_http.py  test_api_service.py  test_clustering.py  test_dashboard.py  test_dashboard_client.py  test_explainability.py  test_features.py  test_modeling.py
tests/copilot/: test_copilot_integration.py  test_evaluator_llm_judge.py  test_evaluator_precheck.py  test_generation.py  test_graph.py  test_tools.py
tests/monitoring/: test_drift.py  test_logging.py
tests/observability/: test_api_tracing.py  test_metrics.py
tests/rag/: test_chunking.py  test_corpus.py  test_generation.py  test_hybrid_search.py  test_openrouter_client.py  test_openrouter_client_integration.py  test_openrouter_client_tools.py  test_openrouter_client_tracing.py  test_pipeline.py  test_reranker.py  test_retrieval.py  test_sparse_index.py  test_vector_store.py
tests/smoke/: docker_smoke.sh
