[project]
name = "credixai"
version = "0.1.0"
description = "Sistema de scoring crediticio explicable con copiloto agentico (CrediXAI)"
authors = [
    { name = "Lorenzo Tomas Diez", email = "lorenzotomasdiez@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "seaborn>=0.13.2",
]

[project.scripts]
credixai = "credixai:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
