[project]
name = "credixai"
version = "0.1.0"
description = "Sistema de scoring crediticio explicable con copiloto agentico (CrediXAI)"
authors = [
    { name = "Lorenzo Tomas Diez", email = "lorenzotomasdiez@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "dice-ml>=0.12",
    "fairlearn>=0.14.0",
    "fastapi>=0.139.0",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "matplotlib>=3.11.0",
    "mlflow-skinny>=3.14.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "skops>=0.14.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
    "xgboost>=3.3.0",
]

[project.scripts]
credixai = "credixai:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
