[project]
name = "credixai"
version = "0.1.0"
description = "Sistema de scoring crediticio explicable con copiloto agentico (CrediXAI)"
authors = [
    { name = "Lorenzo Tomas Diez", email = "lorenzotomasdiez@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "dice-ml>=0.12",
    "fairlearn>=0.14.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "langfuse>=4.14.0",
    "langgraph>=1.2.2",
    "matplotlib>=3.11.0",
    "mlflow-skinny>=3.14.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "skops>=0.14.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
    "xgboost>=3.3.0",
]

[project.scripts]
credixai = "credixai:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "langchain-community==0.3.31",
    "langchain-openai>=1.3.5",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ragas>=0.4.3",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: hits real external services (OpenRouter, Qdrant); excluded from the default fast run.",
]

[tool.ruff]
extend-exclude = ["notebooks"]
